--- a/style.css
+++ b/style.css
@@ -1,7 +1,27 @@
-.win {
-
+.talkingToPlayer {
+  font-size: 25px;
+  text-align: center;
+  padding-top: 30px;
+}
+.won {
+  color: green;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 50px;
+}
+.lost {
+  color: red;
+  font-size: 50px;
+  text-align: center;
+  padding-top: 50px;
 }
 .pirate {
   /*piratey text and shit*/
 
+}
+#fightPirates {
+
+}
+button {
+  padding-top: 30px;
 }
