--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+html {
+  box-sizing: border-box;
+}
+*, *:before, *:after {
+  box-sizing: inherit;
+}
 .talkingToPlayer {
   font-size: 25px;
   text-align: center;
@@ -25,5 +31,22 @@
 }
 .gameSquare {
   border: 1px solid black;
-  height: 50px;
+  height: 120px;
+  width: 10%;
+  float: left;
+  padding-top: 10%;
+  /*margin: 0.5% 0.5% 0px 0px;*/
+  border: 1px solid black;
+
+}
+.wave {
+  border: 1px solid black;
+}
+
+.atlanticOcean {
+  width: 100%;
+  background-color: #898A9A;
+  margin: 0 auto;
+  /*padding: 10px 1px 1px 2px;*/
+  overflow: auto;
 }
