--- a/style.css
+++ b/style.css
@@ -4,6 +4,29 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+.atlanticOcean {
+  width: 100%;
+  background-color: #4B648A;
+  margin: 0 auto;
+  overflow: auto;
+  border: 1px solid #051937;
+}
+/*.wave {
+  border: 1px solid black;
+}*/
+.gameSquare {
+  border: 1px solid black;
+  height: 100px;
+  width: 10%;
+  float: left;
+  padding-top: 10%;
+  /*margin: 0.5% 0.5% 0px 0px;*/
+  border: 1px solid #051937;
+}
+.ship {
+  background-color: red;
+}
+
 .talkingToPlayer {
   font-size: 25px;
   text-align: center;
@@ -28,25 +51,4 @@ html {
 }
 #fightPirates {
 
-}
-.gameSquare {
-  border: 1px solid black;
-  height: 120px;
-  width: 10%;
-  float: left;
-  padding-top: 10%;
-  /*margin: 0.5% 0.5% 0px 0px;*/
-  border: 1px solid black;
-
-}
-.wave {
-  border: 1px solid black;
-}
-
-.atlanticOcean {
-  width: 100%;
-  background-color: #898A9A;
-  margin: 0 auto;
-  /*padding: 10px 1px 1px 2px;*/
-  overflow: auto;
 }
