--- a/style.css
+++ b/style.css
@@ -4,6 +4,9 @@ html {
 *, *:before, *:after {
   box-sizing: inherit;
 }
+footer {
+  margin-top: 20px;
+}
 .atlanticOcean {
   width: 100%;
   background-color: #4B648A;
@@ -15,7 +18,6 @@ html {
   border: 1px solid black;
 }*/
 .gameSquare {
-  border: 1px solid black;
   height: 100px;
   width: 10%;
   float: left;
@@ -25,6 +27,9 @@ html {
 }
 .ship {
   background-color: red;
+}
+.twitterBox {
+  border: 1px solid #051937;
 }
 
 .talkingToPlayer {
